--- a/src/voyage/FirstBundle/Resources/views/layout.html.twig
+++ b/src/voyage/FirstBundle/Resources/views/layout.html.twig
@@ -370,11 +370,11 @@
                     
                     
                     $(window).scroll(function () {  
-                        $('#fixed').css({"position":"fixed", "top":"160px", "left":"0px"});
+                        $('#fixed').css({"position":"fixed", "top":"160px", "left":"0px", "right":"0px"});
 
                         if ($(window).scrollTop() > 1)
                         {
-                            $('#fixed').css({"position":"fixed", "top":"0px", "left":"0px"});
+                            $('#fixed').css({"position":"fixed", "top":"0px", "left":"0px", "right":"0px"});
                         }
     });
                 </script>
