--- a/src/voyage/FirstBundle/Resources/views/layout.html.twig
+++ b/src/voyage/FirstBundle/Resources/views/layout.html.twig
@@ -146,7 +146,7 @@
 				                </div>
 				            
                                                         <ul class="menu profile_img">
-                                                            <li><a class="active-icon c1" href="#" > <img src="{{asset('bundles/voyage/images/profile-pic.png')}}" /></a>
+                                                            <li><a class="active-icon c1" id="7ell" href="#" > <img src="{{asset('bundles/voyage/img/profile-pic.png')}}" /></a>
 									<ul class="sub-menu">
 										<li><a href="#"><img src="{{asset('bundles/voyage/images/supr.png')}}" alt="" />Profile</a></li>
 										<li><a href="#"><img src="{{asset('bundles/voyage/images/start.png')}}" alt="" />Favourites</a></li>
