--- a/src/voyage/FirstBundle/Resources/views/annonces/ajout_Annonce.html.twig
+++ b/src/voyage/FirstBundle/Resources/views/annonces/ajout_Annonce.html.twig
@@ -51,7 +51,6 @@
                                                     <input type="text"/>
 
                                                     <h3>Credit cart infomation</h3>
-                                                    <a href="#" class="card"><img src="{{asset('bundles/voyage/images/card.png')}}" alt=""/></a>
                                                     <label>Name on Card: </label>
                                                     <input type="text"/>
                                                     <label>Card Number: </label>
@@ -101,7 +100,7 @@
                                                         <label>Grand Total:</label>
                                                         <span>138<small>$</small></span>
                                                         <div class="clearfix"></div>
-                                                        <input type="submit" value="book now"/>
+                                                        <input type="submit" value="Ajouter"/>
                                                     </form>
                                                              </div>
                                                 </form>
