--- a/src/voyage/FirstBundle/Resources/views/layout.html.twig
+++ b/src/voyage/FirstBundle/Resources/views/layout.html.twig
@@ -109,7 +109,7 @@
 
                                 <nav class="nav frist-top-nav"  >
                                     <ul>
-                                        <li><a href="{{path('voyage_homepage')}}">accueil <label>6</label></a>
+                                        <li><a href="{{path('voyage_homepage')}}">accueil </a>
                                           <!--  <ul class="clearfix">
                                                 <li><a href="index2.html">Home 2</a></li>
                                                 <li><a href="index3.html">Home 3 </a></li>
@@ -125,8 +125,8 @@
                                         </li>
                                         
                                    
-                                        <li><a href="{{path('reservation')}}">Reservation</a></li>
-                                         
+                                        <li><a href="{{path('reservation')}}">Reservation<label>2</label></a></li>
+                                         <li><a href="{{path('proposition')}}">Proposition<label>6</label></a></li>
                                         <li  class="last"><a href="{{path('voyage_contact')}}">Contact</a></li>
                                    
                                           <a id="loginButton" class=""><span>Me</span></a>   
