--- a/src/voyage/FirstBundle/Resources/views/layout.html.twig
+++ b/src/voyage/FirstBundle/Resources/views/layout.html.twig
@@ -202,7 +202,7 @@ function fb_login(){
 							        			<h4>Hello,<a href="#"> {{username}}</a></h4>
 							        			<ul>
 							        				<li class="profile active"><a href="{{path('profil')}}">Profile </a></li>
-							        				<li class="logout"><a href="#"> Logout</a></li>
+							        				<li class="logout"><a href="{{path('voyage_homepage')}}logout"> Logout</a></li>
 							        				<div class="clear"></div>		
 							        			</ul>
 							    </div>			                            
@@ -212,12 +212,7 @@ function fb_login(){
                                                 
                                                         <ul class="menu profile_img">
                                                             <li><a class="active-icon c1" id="7ell" href="{{path('profil')}}" > <img src="{{asset('bundles/voyage/img/profile-pic.png')}}" /></a>
-									<ul class="sub-menu">
-										<li><a href="#"><img src="{{asset('bundles/voyage/images/supr.png')}}" alt="" />Profile</a></li>
-										<li><a href="#"><img src="{{asset('bundles/voyage/images/start.png')}}" alt="" />Favourites</a></li>
-										<li><a href="#"><img src="{{asset('bundles/voyage/images/gar.png')}}" alt="" />Settings</a></li>
-										<li><a href="#"><img src="{{asset('bundles/voyage/images/logout.png')}}" alt="" />Logout</a></li>
-									</ul>
+									
 								</li>
 							</ul>
                                          <a id="loginButton" class=""><span>  {{username}} </span></a>
