--- a/src/voyage/FirstBundle/Resources/views/layout.html.twig
+++ b/src/voyage/FirstBundle/Resources/views/layout.html.twig
@@ -190,7 +190,7 @@ function fb_login(){
                                                 <li><a href="{{path('proposition_create')}}">Ajout Proposition</a>
                                             </ul>
                                         </li>
-                                        </li>
+                                        <li  class="last"><a href="{{path('stat')}}">Statistique</a></li>
                                         <li  class="last"><a href="{{path('voyage_contact')}}">Contact</a></li>
                                    
                                             
